<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_start_menu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/hopfendolde" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/button_start_game"
        app:layout_constraintEnd_toEndOf="@+id/button_start_game"
        app:layout_constraintStart_toStartOf="@+id/button_start_game" />

    <Button
        android:id="@+id/button_start_game"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:foregroundGravity="center_horizontal"
        android:text="@string/create_game"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button-join_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/join_game"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/button_start_game"
        app:layout_constraintStart_toStartOf="@+id/button_start_game"
        app:layout_constraintTop_toBottomOf="@+id/button_start_game" />
</androidx.constraintlayout.widget.ConstraintLayout>